Fix: Remove CSS display:none from channelInputs to fix visibility issue

--- a/MomentumPeaks_Input.html
+++ b/MomentumPeaks_Input.html
@@ -197,7 +197,7 @@
         }
 
         #channelInputs {
-            display: none;
+            /* Controlled by JavaScript - no default display:none */
         }
 
         .hidden {
