✨ Add Why Based Approach section - ask Why to everything

--- a/index.html
+++ b/index.html
@@ -388,6 +388,30 @@
         </div>
     </section>
 
+    <!-- WHY BASED APPROACH -->
+    <section class="section">
+        <p class="section-label">Why Based Approach</p>
+        <h2>すべてに「Why」を問う</h2>
+        <p class="section-desc">毎日の営業、来られるお客様、来られないお客様。その行動と思考に「なぜ？」を問い、最適解を手繰り寄せる。</p>
+        <div class="grid-3">
+            <div class="grid-item">
+                <div class="grid-icon">🌊</div>
+                <h3>定数を読む</h3>
+                <p>季節・曜日・イベント。変えられない環境要因を正しく理解し、味方につける。</p>
+            </div>
+            <div class="grid-item">
+                <div class="grid-icon">❓</div>
+                <h3>Whyを問う</h3>
+                <p>「なぜ今日来るのか？」「なぜ来ないのか？」お客様の行動には必ず理由がある。</p>
+            </div>
+            <div class="grid-item">
+                <div class="grid-icon">🎯</div>
+                <h3>最適解へ</h3>
+                <p>「Why」が分かれば「どうすべきか」が見える。環境を活かした最高の準備を。</p>
+            </div>
+        </div>
+    </section>
+
     <section class="section">
         <p class="section-label">Season Index</p>
         <h2>月別季節指数</h2>
