--- a/index.html
+++ b/index.html
@@ -363,6 +363,43 @@
         <div class="formula-box">
             <code>TOTAL = ( Season + Weekday + Visitors ) ÷ 3 + Event</code>
         </div>
+
+        <!-- Key Factors -->
+        <div
+            style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; margin-top: 40px; max-width: 800px;">
+            <div style="text-align: center; padding: 16px;">
+                <div
+                    style="font-size: 11px; font-weight: 500; color: var(--gold); letter-spacing: 1px; margin-bottom: 6px;">
+                    SEASON</div>
+                <div style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">季節指数</div>
+                <div style="font-size: 11px; font-weight: 300; color: var(--text-tertiary); margin-top: 4px;">月ごとの繁閑
+                </div>
+            </div>
+            <div style="text-align: center; padding: 16px;">
+                <div
+                    style="font-size: 11px; font-weight: 500; color: var(--gold); letter-spacing: 1px; margin-bottom: 6px;">
+                    WEEKDAY</div>
+                <div style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">曜日指数</div>
+                <div style="font-size: 11px; font-weight: 300; color: var(--text-tertiary); margin-top: 4px;">曜日ごとの波
+                </div>
+            </div>
+            <div style="text-align: center; padding: 16px;">
+                <div
+                    style="font-size: 11px; font-weight: 500; color: var(--gold); letter-spacing: 1px; margin-bottom: 6px;">
+                    VISITORS</div>
+                <div style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">来場者指数</div>
+                <div style="font-size: 11px; font-weight: 300; color: var(--text-tertiary); margin-top: 4px;">拠点への人流
+                </div>
+            </div>
+            <div style="text-align: center; padding: 16px;">
+                <div
+                    style="font-size: 11px; font-weight: 500; color: var(--gold); letter-spacing: 1px; margin-bottom: 6px;">
+                    EVENT</div>
+                <div style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">イベント加算</div>
+                <div style="font-size: 11px; font-weight: 300; color: var(--text-tertiary); margin-top: 4px;">特別期間ブースト
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="section">
