💪 Increase font weight for LAYER labels and FINAL OUTPUT section

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <div
                 style="background: var(--surface); border: 1px solid var(--border); border-radius: 16px; padding: 30px; margin-bottom: 20px;">
                 <div
-                    style="font-size: 10px; font-weight: 500; letter-spacing: 2px; color: var(--gold); margin-bottom: 16px;">
+                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: var(--gold); margin-bottom: 16px;">
                     LAYER 1 ─ 拠点（施設）レベル【定数】</div>
 
                 <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; margin-bottom: 20px;">
@@ -406,7 +406,7 @@
             <div
                 style="background: var(--surface); border: 1px solid var(--border); border-radius: 16px; padding: 30px; margin-bottom: 20px;">
                 <div
-                    style="font-size: 10px; font-weight: 500; letter-spacing: 2px; color: var(--gold); margin-bottom: 16px;">
+                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: var(--gold); margin-bottom: 16px;">
                     LAYER 2 ─ 店舗レベル【実績】</div>
 
                 <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 12px;">
@@ -435,17 +435,16 @@
                 </div>
             </div>
 
-            <!-- Final Formula -->
             <div
-                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 30px; text-align: center;">
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center;">
                 <div
-                    style="font-size: 10px; font-weight: 500; letter-spacing: 2px; color: rgba(255,255,255,0.7); margin-bottom: 12px;">
+                    style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
                     ⑦ FINAL OUTPUT</div>
                 <div
-                    style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 16px; font-weight: 500; color: #fff; margin-bottom: 8px;">
+                    style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 20px; font-weight: 600; color: #fff; margin-bottom: 12px;">
                     月別 Momentum Peaks = ( KF① + KF② + KF③ ) ÷ 3
                 </div>
-                <div style="font-size: 12px; color: rgba(255,255,255,0.8);">定数と実績を統合した適正フォーキャスト</div>
+                <div style="font-size: 14px; font-weight: 400; color: rgba(255,255,255,0.9);">定数と実績を統合した適正フォーキャスト</div>
             </div>
 
         </div>
