🚀 Update Ultimate Goal message and capitalize footer brand

--- a/index.html
+++ b/index.html
@@ -723,9 +723,13 @@
                 シフト設計を実現する。
             </p>
             <div
-                style="margin-top: 30px; padding: 20px 30px; background: var(--gold); border-radius: 12px; display: inline-block;">
-                <p style="font-size: 13px; font-weight: 500; color: #fff; margin: 0;">
-                    🎯 ULTIMATE GOAL：<strong>ボタンひとつで最適シフトが提案される</strong>
+                style="margin-top: 30px; padding: 24px 35px; background: var(--gold); border-radius: 12px; display: inline-block;">
+                <p style="font-size: 14px; font-weight: 600; color: #fff; margin: 0;">
+                    🎯 ULTIMATE GOAL
+                </p>
+                <p style="font-size: 15px; font-weight: 500; color: #fff; margin: 8px 0 0 0;">
+                    ボタンひとつで最適シフトが提案される<br>
+                    <strong>拠点と店舗に合致したシフト作成ツールの完成による業務革命</strong>
                 </p>
             </div>
         </div>
@@ -734,7 +738,7 @@
     <footer>
         <p>Momentum Peaks Intelligence</p>
         <p class="footer-brand">SVD Operating System</p>
-        <p>© 2026 Sapporo Viewtiful Dining</p>
+        <p>© 2026 SAPPORO VIEWTIFUL DINING</p>
     </footer>
 
 </body>
