--- a/index.html
+++ b/index.html
@@ -723,13 +723,19 @@
                 シフト設計を実現する。
             </p>
             <div
-                style="margin-top: 30px; padding: 24px 35px; background: var(--gold); border-radius: 12px; display: inline-block;">
-                <p style="font-size: 14px; font-weight: 600; color: #fff; margin: 0;">
+                style="margin-top: 30px; padding: 28px 40px; background: var(--gold); border-radius: 16px; display: inline-block;">
+                <p
+                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0;">
                     🎯 ULTIMATE GOAL
                 </p>
-                <p style="font-size: 15px; font-weight: 500; color: #fff; margin: 8px 0 0 0;">
-                    ボタンひとつで最適シフトが提案される<br>
-                    <strong>拠点と店舗に合致したシフト作成ツールの完成による業務革命</strong>
+                <p style="font-size: 15px; font-weight: 400; color: #fff; margin: 12px 0 0 0;">
+                    ボタンひとつで最適シフトが提案される<br>拠点と店舗に合致した
+                </p>
+                <p style="font-size: 22px; font-weight: 600; color: #fff; margin: 8px 0;">
+                    シフト作成ツールの完成
+                </p>
+                <p style="font-size: 28px; font-weight: 700; color: #fff; margin: 0; letter-spacing: 2px;">
+                    業務革命
                 </p>
             </div>
         </div>
