--- a/index.html
+++ b/index.html
@@ -734,6 +734,9 @@
                 <p style="font-size: 22px; font-weight: 600; color: #fff; margin: 8px 0;">
                     シフト作成ツールの完成
                 </p>
+                <p style="font-size: 12px; font-weight: 400; color: rgba(255,255,255,0.7); margin: 4px 0;">
+                    による
+                </p>
                 <p style="font-size: 28px; font-weight: 700; color: #fff; margin: 0; letter-spacing: 2px;">
                     業務革命
                 </p>
