🎨 Natural flow for Ultimate Goal section

--- a/index.html
+++ b/index.html
@@ -725,20 +725,13 @@
             <div
                 style="margin-top: 30px; padding: 28px 40px; background: var(--gold); border-radius: 16px; display: inline-block;">
                 <p
-                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0;">
+                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 12px 0;">
                     🎯 ULTIMATE GOAL
                 </p>
-                <p style="font-size: 15px; font-weight: 400; color: #fff; margin: 12px 0 0 0;">
-                    ボタンひとつで最適シフトが提案される<br>拠点と店舗に合致した
-                </p>
-                <p style="font-size: 22px; font-weight: 600; color: #fff; margin: 8px 0;">
-                    シフト作成ツールの完成
-                </p>
-                <p style="font-size: 12px; font-weight: 400; color: rgba(255,255,255,0.7); margin: 4px 0;">
-                    による
-                </p>
-                <p style="font-size: 28px; font-weight: 700; color: #fff; margin: 0; letter-spacing: 2px;">
-                    業務革命
+                <p style="font-size: 16px; font-weight: 400; color: #fff; margin: 0; line-height: 1.8;">
+                    ボタンひとつで最適シフトが提案される<br>
+                    拠点と店舗に合致した<strong style="font-size: 18px;">シフト作成ツールの完成</strong>による<br>
+                    <strong style="font-size: 24px; letter-spacing: 1px;">業務革命</strong>
                 </p>
             </div>
         </div>
